# scry-cli

./: .gitignore  README.md  pyproject.toml
scry/: api.py  cli.py  display.py  models.py
