[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scry-cli"
version = "0.1.0"
description = "CLI tool for querying the Scryfall Magic: The Gathering API"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.25",
    "rich>=13.0",
]

[project.scripts]
scry = "scry.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["scry*"]
